# python_template

./: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml  ci.yml  deploy.yml  test.yml
app/: main.py
app/config/: settings.py
app/models/: models.py
app/routes/api/: health.py
docker/: .env.development  .env.example  .env.production  .env.staging  .env.test  Dockerfile  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml
docs/: architecture.md  architecture_philosophy.md
tests/integration/test_api/: test_health_integration.py
tests/unit/routes/api/: test_health.py
